<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.SigninFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="@dimen/dimen_30dp"
        app:layout_constraintBottom_toTopOf="@+id/signInBtn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Signin Into Account"
                android:textColor="@color/red"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailIdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:hint="Email"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/red"
                app:endIconTint="@color/red"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/textView" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmailSignIN"
                    android:padding="0dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:hint="Password"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/red"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/red"
                app:layout_constraintTop_toBottomOf="@id/emailIdContainer" >
                <com.google.android.material.textfield.TextInputEditText
                    android:padding="0dp"
                    android:id="@+id/editPassSignIn"
                    android:inputType="textPassword"
                    android:minHeight="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:text="@string/forgot_password"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_red"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

            <TextView
                android:id="@+id/tvLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:background="#99008AE6"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword"></TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tvLine"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dimen_24dp"
                app:cardCornerRadius="50pt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvLine">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="OR"
                    android:padding="6dp"
                    android:background="@drawable/drawable_circular_background"
                    android:includeFontPadding="false"></TextView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/loginContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/textView6">
                <ImageView
                    android:id="@+id/googleLoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google" />
                <ImageView
                    android:id="@+id/fbLoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_30dp"
                    android:src="@drawable/ic_fb" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/login_with"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLine" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:layout_constraintTop_toBottomOf="@+id/loginContainer">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginContainer" />

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:text="@string/register_now"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7" />
            </LinearLayout>
            <include android:id="@+id/progressBar"
                android:visibility="gone"
                layout="@layout/layout_progress_bar_red"></include>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:padding="@dimen/dimen_8dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>